--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,23 @@ img {
         width: 100%;
     }
 }
+
+@media all and (max-width: 480px) {
+    .row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .lessons .col {
+        width: 100%;
+    }
+
+    .steps .col {
+        width: 100%;
+    }
+
+    .col {
+        width: 100%;
+    }
+
+}
