[fix]footer mobile media querry

--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,27 @@ img {
         width: 100%;
     }
 
-    .col {
+    /*footer*/
+
+    .why-us {
+        background-color: black;
+        margin-bottom: 0px;
+    }
+
+    .why-us .col-left {
         width: 100%;
     }
 
+    .why-us .col-right {
+        width: 100%;
+        margin-top: 50px;
+    }
+
+    .steps {
+        margin-bottom: 0px;
+    }
+
+    .why-us h2 {
+        padding: 30px;
+    }
 }
